# cattle-management-system

./: Dockerfile  README.md  docker-compose.yml  run.bat  run.sh
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  auth.py  cattle.py
backend/app/core/: __init__.py  config.py  database.py
backend/app/models/: __init__.py  registro_peso.py  registro_salud.py  reporte.py  usuario.py  vaca.py
backend/app/schemas/: __init__.py  auth.py  cattle.py
frontend/: angular.json  package.json  tsconfig.json
frontend/src/: index.html  styles.css
frontend/src/app/: app.component.ts  app.module.ts
frontend/src/app/auth/components/: login.component.ts
frontend/src/app/cattle/components/: cattle-list.component.ts  dashboard.component.ts
frontend/src/app/shared/services/: auth.service.ts  cattle.service.ts
